ingress_controllers/templates/ingress_classes.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: public-nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
