ingress_controllers/templates/private_ingress_controller.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-private
  namespace: ingress-controllers
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-private
  labels:
    app: traefik-private
  namespace: ingress-controllers

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-private
  template:
    metadata:
      labels:
        app: traefik-private
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik-private
          image: traefik:v2.8
          args:
            - --providers.kubernetesingress
            - --providers.kubernetesingress.ingressclass="traefik-private"
            - --providers.kubernetesingress.ingressendpoint.hostname=testing.atikarooms.com
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-private
  namespace: ingress-controllers
spec:
  type: NodePort
  selector:
    app: traefik-private
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
      nodePort: 32100
