ingress_controllers/templates/public_ingress_controller.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-public
  namespace: ingress-controllers
spec:
  controller: traefik.io/ingress-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-public
  labels:
    app: traefik-public
  namespace: ingress-controllers

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-public
  template:
    metadata:
      labels:
        app: traefik-public
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik-public
          image: traefik:v2.8
          args:
            - --providers.kubernetesingress
            - --providers.kubernetesingress.ingressclass=traefik-public
            - --providers.kubernetesingress.ingressendpoint.publishedservice=ingress-controllers/traefik-public
          ports:
            - name: web
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-public
  namespace: ingress-controllers
spec:
  type: NodePort
  selector:
    app: traefik-public
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
      nodePort: 32000
