ingress_controllers/templates/kubernetesDashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-http-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik-private"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              name: http
    host: dashboard.testing.atikarooms.com
